Update links for Valentine's Week special days

--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@ a.day{
 
 <h1>Pugu ❤️ Bugu</h1>
 <p>Valentine's Week Special Website</p>
-
-<a class="day" href="rose-day.html">🌹 Rose Day</a>
-<a class="day" href="propose-day.html">💍 Propose Day</a>
-<a class="day" href="chocolate-day.html">🍫 Chocolate Day</a>
-<a class="day" href="teddy-day.html">🧸 Teddy Day</a>
-<a class="day" href="promise-day.html">🤝 Promise Day</a>
-<a class="day" href="hug-day.html">🤗 Hug Day</a>
-<a class="day" href="kiss-day.html">💋 Kiss Day</a>
-<a class="day" href="valentines-day.html">❤️ Valentine's Day</a>
+<a class="day" href="Rose Day.html">🌹 Rose Day</a>
+<a class="day" href="Feb8_ProposeDay.html">💍 Propose Day</a>
+<a class="day" href="Feb9_ChocolateDay.html">🍫 Chocolate Day</a>
+<a class="day" href="Feb10_TeddyDay.html">🧸 Teddy Day</a>
+<a class="day" href="Feb11_PromiseDay.html">🤝 Promise Day</a>
+<a class="day" href="Feb12_HugDay.html">🤗 Hug Day</a>
+<a class="day" href="Feb13_KissDay.html">💋 Kiss Day</a>
+<a class="day" href="Feb14_ValentinesDay.html">❤️ Valentine's Day</a>
 
 </body>
 </html>
