--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ h1 {
 <!-- LANDING PAGE -->
 <section id="landing">
   <div class="title">Bugu ❤️ Pugu</div>
-  <div class="unique-msg">Every heartbeat, every moment… leads me closer to you.</div>
+  <div class="unique-msg">Pugu has prepared something magical for you…</div>
   <button class="enter-btn" onclick="enterSite()">Enter</button>
   <div id="countdown"></div>
 </section>
