--- a/index.html
+++ b/index.html
@@ -28,55 +28,91 @@ body {
   100% { transform: translateY(120vh) rotate(360deg); }
 }
 
-/* LANDING PAGE */
+/* UPDATED LANDING PAGE */
 #landing {
   height: 100vh;
-  background: linear-gradient(135deg,#ff8bb0,#ffcbe6);
+  background: linear-gradient(135deg,#ffcfe4,#ffdfea);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  position: relative;
   color: white;
-  text-shadow: 0 0 15px #ff7eb3;
+  text-shadow: 0 0 18px #ff9acb;
   animation: fadeIn 2s;
+  border-bottom-left-radius: 38px;
+  border-bottom-right-radius: 38px;
+  box-shadow:0 0 35px 18px #ffd6ea inset, 0 0 55px #ffcde6;
+  overflow:hidden;
 }
 
-.title {
-  font-size: 48px;
-  font-weight: 700;
-  animation: slideUp 1.4s;
+/* Floating minimal hearts */
+.miniHeart{
+  position:absolute;
+  top:110%;
+  font-size:24px;
+  opacity:0.55;
+  animation:floatMini 6s linear infinite;
+}
+@keyframes floatMini{
+  0%{transform:translateY(0) scale(1); opacity:0.6;}
+  100%{transform:translateY(-200%) scale(1.2); opacity:0;}
 }
 
-.unique-msg {
-  margin-top: 12px;
-  font-size: 20px;
-  color: white;
-  text-shadow: 0 0 12px #fff;
-  animation: fadeIn 2.5s;
+/* Bokeh circles */
+#bokehContainer{
+  position:absolute; top:0; left:0; width:100%; height:100%;
+  overflow:hidden; z-index:-1;
+}
+.bokeh{
+  position:absolute; border-radius:50%; background:rgba(255,255,255,0.45);
+  filter:blur(18px); animation:floatBokeh 8s infinite;
+}
+@keyframes floatBokeh{
+  0%{transform:translateY(0) scale(1);}
+  100%{transform:translateY(-160%) scale(1.4); opacity:0;}
+}
+
+/* HEARTBEAT ANIMATION */
+@keyframes heartbeat {
+  0%{transform:scale(1);}
+  30%{transform:scale(1.08);}
+  60%{transform:scale(0.98);}
+  100%{transform:scale(1);}
+}
+
+.pastelRibbon{
+  width:60%; height:12px;
+  background:linear-gradient(90deg,#ffe0ec,#ffd1e8,#ffeaf2);
+  border-radius:20px;
+  margin-top:14px;
+  box-shadow:0 0 12px #ffffffaa;
+}
+
+/* Made For Bugu Tag */
+.madeTag{
+  position:absolute;
+  bottom:20px;
+  font-size:14px;
+  color:white;
+  opacity:0.75;
+  text-shadow:0 0 8px #fff;
 }
 
 .enter-btn {
-  margin-top: 18px;
-  padding: 14px 32px;
-  background: #ffb4d2;
+  margin-top: 28px;
+  padding: 12px 26px;
+  background: white;
   border: none;
-  border-radius: 14px;
-  font-size: 22px;
+  border-radius: 12px;
+  font-size: 20px;
   cursor: pointer;
-  box-shadow: 0 0 18px #ff9ac2;
-  color: #000;
+  box-shadow: 0 0 12px #ffffffc0;
+  color: #d12c6a;
   font-weight: 600;
-  transition: 0.3s;
 }
 .enter-btn:hover {
   transform: scale(1.08);
-  box-shadow: 0 0 24px #ff7eb3;
-}
-
-@keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
-@keyframes slideUp {
-  0% { opacity:0; transform:translateY(30px); }
-  100% { opacity:1; transform:translateY(0); }
 }
 
 /* MAIN PAGE */
@@ -94,6 +130,7 @@ h1 {
   text-shadow: 0 0 12px #fff;
 }
 
+/* Day buttons */
 .day-btn {
   margin: 12px auto;
   padding: 15px;
@@ -109,29 +146,16 @@ h1 {
   display: block;
   opacity: 0.5;
   pointer-events: none;
-  transition: 0.3s;
   border: 2px solid transparent;
 }
-
 .day-btn.active {
   opacity: 1;
   pointer-events: auto;
   border: 2px solid #ff2d6f;
-  box-shadow: 0 0 18px #ff3b82;
-}
-.day-btn.active:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 30px #ff4f9a;
+  box-shadow: 0 0 20px #ff3b82;
 }
 
-#countdown {
-  margin-top: 15px;
-  color: white;
-  font-size: 18px;
-  text-shadow: 0 0 10px #fff;
-}
-
-/* SURPRISE PAGE */
+/* Surprise page */
 #surprise {
   display: none;
   height: 100vh;
@@ -140,14 +164,13 @@ h1 {
   font-size: 42px;
   text-align: center;
   padding-top: 130px;
-  animation: fadeIn 2s;
 }
 </style>
 
 </head>
 <body>
 
-<!-- HEART PARTICLES -->
+<!-- PARTICLES -->
 <div id="particles"></div>
 
 <!-- MUSIC -->
@@ -157,18 +180,46 @@ h1 {
 
 <!-- LANDING PAGE -->
 <section id="landing">
-  <div class="title">Bugu ❤️ Pugu</div>
-  <div class="unique-msg">Pugu has prepared something magical for you…</div>
-  <button class="enter-btn" onclick="enterSite()">Enter</button>
-  <div id="countdown"></div>
+
+  <!-- Bokeh -->
+  <div id="bokehContainer"></div>
+
+  <!-- Minimal cute hearts -->
+  <div class="miniHeart" style="left:20%; animation-delay:0s;">🤍</div>
+  <div class="miniHeart" style="left:70%; animation-delay:1.3s;">🤍</div>
+  <div class="miniHeart" style="left:45%; animation-delay:2s;">🤍</div>
+
+  <!-- Title with heartbeat -->
+  <div class="title" style="font-size:50px; font-weight:700; letter-spacing:1px; text-shadow:0 0 8px #ffffffb0; animation:heartbeat 1.8s infinite;">
+    Bugu ❤️ Pugu
+  </div>
+
+  <!-- Ribbon -->
+  <div class="pastelRibbon"></div>
+
+  <!-- Message -->
+  <div class="unique-msg" style="margin-top:18px; font-size:20px; max-width:80%; text-align:center; opacity:0.9; line-height:1.5;">
+    Pugu has prepared something magical for you…
+  </div>
+
+  <!-- ENTER BUTTON -->
+  <button class="enter-btn" onclick="enterSite()">Enter 💗</button>
+
+  <!-- Countdown -->
+  <div id="countdown" style="margin-top:25px; font-size:17px; opacity:0.85;"></div>
+
+  <!-- Made For Bugu -->
+  <div class="madeTag">Made for Bugu • 💗</div>
+
 </section>
+
+
 
 <!-- MAIN PAGE -->
 <section id="main">
-  <h2 style="color:white;text-shadow:0 0 10px #fff; margin-bottom:20px;">Daily Unlock Countdown</h2>
+  <h2 style="color:white;margin-bottom:20px;">Daily Unlock Countdown</h2>
   <h1>Valentine’s Week Letters</h1>
 
-  <!-- Progress Bar -->
   <div id="progressContainer" style="width:90%;max-width:500px;background:rgba(255,255,255,0.2);height:18px;border-radius:14px;margin:20px auto;overflow:hidden;">
     <div id="progressBar" style="width:0%;height:100%;background:#ff2d6f;box-shadow:0 0 14px #ff4f9a;"></div>
   </div>
@@ -180,16 +231,28 @@ h1 {
   <div><a id="d11" class="day-btn" href="Feb11_PromiseDay.html">Feb 11 — Promise Day 🤝</a><div id="cd11"></div></div>
   <div><a id="d12" class="day-btn" href="Feb12_HugDay.html">Feb 12 — Hug Day 🤗</a><div id="cd12"></div></div>
   <div><a id="d13" class="day-btn" href="Feb13_KissDay.html">Feb 13 — Kiss Day 💋</a><div id="cd13"></div></div>
-  <div><a id="d14" class="day-btn" href="#" onclick="showSurprise()">Feb 14 — Valentine's Day ❤️</a><div id="cd14"></div></div>
+  <div><a id="d14" class="day-btn" href="Feb14_ValentinesDay.html">Feb 14 — Valentine's Day ❤️</a><div id="cd14"></div></div>
 </section>
 
-<!-- SURPRISE PAGE -->
-<section id="surprise">
-  I LOVE YOU SO MUCH BUGU ❤️<br><br>
-  Forever Yours,<br>Pugu
-</section>
+
+
 
 <script>
+/* Bokeh Generator */
+(function(){
+  const container=document.getElementById('bokehContainer');
+  for(let i=0;i<12;i++){
+    let c=document.createElement('div');
+    let size=(30+Math.random()*70);
+    c.classList.add('bokeh');
+    c.style.width=size+'px';
+    c.style.height=size+'px';
+    c.style.left=Math.random()*100+'%';
+    c.style.top=(50+Math.random()*60)+'%';
+    c.style.animationDuration=(6+Math.random()*4)+'s';
+    container.appendChild(c);
+  }
+})();
 
 /* HEART PARTICLES */
 function createHearts() {
@@ -212,11 +275,10 @@ function enterSite() {
   unlockDays();
 }
 
-/* AUTO UNLOCK AT MIDNIGHT */
+/* AUTO UNLOCK */
 function unlockDays() {
   const now = new Date();
   const y = now.getFullYear();
-
   const unlock = {
     d7:  new Date(`${y}-02-07T00:00:00`).getTime(),
     d8:  new Date(`${y}-02-08T00:00:00`).getTime(),
@@ -228,12 +290,10 @@ function unlockDays() {
     d14: new Date(`${y}-02-14T00:00:00`).getTime(),
   };
 
-  const current = now.getTime();
-  for (let id in unlock) {
-    if (current >= unlock[id]) {
+  const curr = now.getTime();
+  for (let id in unlock)
+    if (curr >= unlock[id])
       document.getElementById(id).classList.add("active");
-    }
-  }
 }
 
 /* COUNTDOWN TO FEB 7 */
@@ -258,41 +318,38 @@ setInterval(countdown, 1000);
 
 /* SURPRISE PAGE */
 function showSurprise() {
-  document.getElementById('main').style.display = 'none';
-  document.getElementById('surprise').style.display = 'block';
+  document.getElementById('main').style.display='none';
+  document.getElementById('surprise').style.display='block';
 }
 
 /* DAILY COUNTDOWN */
 function dailyCountdown() {
-  const y = new Date().getFullYear();
-  const targets = {
-    cd7:  new Date(`${y}-02-07T00:00:00`).getTime(),
-    cd8:  new Date(`${y}-02-08T00:00:00`).getTime(),
-    cd9:  new Date(`${y}-02-09T00:00:00`).getTime(),
-    cd10: new Date(`${y}-02-10T00:00:00`).getTime(),
-    cd11: new Date(`${y}-02-11T00:00:00`).getTime(),
-    cd12: new Date(`${y}-02-12T00:00:00`).getTime(),
-    cd13: new Date(`${y}-02-13T00:00:00`).getTime(),
-    cd14: new Date(`${y}-02-14T00:00:00`).getTime(),
+  const y=new Date().getFullYear();
+  const targets={
+    cd7:new Date(`${y}-02-07T00:00:00`).getTime(),
+    cd8:new Date(`${y}-02-08T00:00:00`).getTime(),
+    cd9:new Date(`${y}-02-09T00:00:00`).getTime(),
+    cd10:new Date(`${y}-02-10T00:00:00`).getTime(),
+    cd11:new Date(`${y}-02-11T00:00:00`).getTime(),
+    cd12:new Date(`${y}-02-12T00:00:00`).getTime(),
+    cd13:new Date(`${y}-02-13T00:00:00`).getTime(),
+    cd14:new Date(`${y}-02-14T00:00:00`).getTime(),
   };
 
-  setInterval(() => {
-    const now = Date.now();
-    for (let id in targets) {
-      const box = document.getElementById(id);
-      if (!box) continue;
-
-      const diff = targets[id] - now;
-      if (diff <= 0) { box.innerHTML = "Unlocked!"; continue; }
-
-      const d = Math.floor(diff/(1000*60*60*24));
-      const h = Math.floor((diff%(1000*60*60*24))/(1000*60*60));
-      const m = Math.floor((diff%(1000*60*60))/(1000*60));
-      const s = Math.floor((diff%(1000*60))/1000);
-
-      box.innerHTML = `${d}d ${h}h ${m}m ${s}s`;
+  setInterval(()=>{
+    const now=Date.now();
+    for(let id in targets){
+      const box=document.getElementById(id);
+      if(!box) continue;
+      const diff=targets[id]-now;
+      if(diff<=0){ box.innerHTML="Unlocked!"; continue; }
+      const d=Math.floor(diff/(1000*60*60*24));
+      const h=Math.floor((diff%(1000*60*60*24))/(1000*60*60));
+      const m=Math.floor((diff%(1000*60*60))/(1000*60));
+      const s=Math.floor((diff%(1000*60))/1000);
+      box.innerHTML=`${d}d ${h}h ${m}m ${s}s`;
     }
-  }, 1000);
+  },1000);
 }
 dailyCountdown();
 
